--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -615,6 +615,7 @@
   "global.availableFunds": "Available funds",
   "global.buy": "Buy",
   "global.cancel": "Cancel",
+  "global.collateral": "Collateral",
   "global.close": "close",
   "global.clear": "clear",
   "global.signTransaction": "Sign transaction",
