--- a/apps/wallet-mobile/translations/messages/src/features/Settings/SettingsScreenNavigator.json
+++ b/apps/wallet-mobile/translations/messages/src/features/Settings/SettingsScreenNavigator.json
@@ -4,14 +4,14 @@
     "defaultMessage": "!!!Wallet",
     "file": "src/features/Settings/SettingsScreenNavigator.tsx",
     "start": {
-      "line": 173,
+      "line": 182,
       "column": 18,
-      "index": 5113
+      "index": 5347
     },
     "end": {
-      "line": 176,
+      "line": 185,
       "column": 3,
-      "index": 5211
+      "index": 5445
     }
   },
   {
@@ -19,14 +19,14 @@
     "defaultMessage": "!!!Application",
     "file": "src/features/Settings/SettingsScreenNavigator.tsx",
     "start": {
-      "line": 177,
+      "line": 186,
       "column": 15,
-      "index": 5228
+      "index": 5462
     },
     "end": {
-      "line": 180,
+      "line": 189,
       "column": 3,
-      "index": 5337
+      "index": 5571
     }
   },
   {
@@ -34,14 +34,14 @@
     "defaultMessage": "!!!Change PIN",
     "file": "src/features/Settings/SettingsScreenNavigator.tsx",
     "start": {
-      "line": 181,
+      "line": 190,
       "column": 24,
-      "index": 5363
+      "index": 5597
     },
     "end": {
-      "line": 184,
+      "line": 193,
       "column": 3,
-      "index": 5472
+      "index": 5706
     }
   },
   {
@@ -49,14 +49,14 @@
     "defaultMessage": "!!!Change spending password",
     "file": "src/features/Settings/SettingsScreenNavigator.tsx",
     "start": {
-      "line": 185,
+      "line": 194,
       "column": 23,
-      "index": 5497
+      "index": 5731
     },
     "end": {
-      "line": 188,
+      "line": 197,
       "column": 3,
-      "index": 5611
+      "index": 5845
     }
   },
   {
@@ -64,14 +64,14 @@
     "defaultMessage": "!!!Remove wallet",
     "file": "src/features/Settings/SettingsScreenNavigator.tsx",
     "start": {
-      "line": 189,
+      "line": 198,
       "column": 21,
-      "index": 5634
+      "index": 5868
     },
     "end": {
-      "line": 192,
+      "line": 201,
       "column": 3,
-      "index": 5735
+      "index": 5969
     }
   },
   {
@@ -79,14 +79,14 @@
     "defaultMessage": "!!!Terms of Service Agreement",
     "file": "src/features/Settings/SettingsScreenNavigator.tsx",
     "start": {
-      "line": 193,
+      "line": 202,
       "column": 23,
-      "index": 5760
+      "index": 5994
     },
     "end": {
-      "line": 196,
+      "line": 205,
       "column": 3,
-      "index": 5876
+      "index": 6110
     }
   },
   {
@@ -94,14 +94,14 @@
     "defaultMessage": "!!!Change wallet name",
     "file": "src/features/Settings/SettingsScreenNavigator.tsx",
     "start": {
-      "line": 197,
+      "line": 206,
       "column": 25,
-      "index": 5903
+      "index": 6137
     },
     "end": {
-      "line": 200,
+      "line": 209,
       "column": 3,
-      "index": 6007
+      "index": 6241
     }
   },
   {
@@ -109,14 +109,14 @@
     "defaultMessage": "!!!Support",
     "file": "src/features/Settings/SettingsScreenNavigator.tsx",
     "start": {
-      "line": 201,
+      "line": 210,
       "column": 16,
-      "index": 6025
+      "index": 6259
     },
     "end": {
-      "line": 204,
+      "line": 213,
       "column": 3,
-      "index": 6116
+      "index": 6350
     }
   },
   {
@@ -124,14 +124,14 @@
     "defaultMessage": "!!!Easy confirmation",
     "file": "src/features/Settings/SettingsScreenNavigator.tsx",
     "start": {
-      "line": 205,
+      "line": 214,
       "column": 31,
-      "index": 6149
+      "index": 6383
     },
     "end": {
-      "line": 208,
+      "line": 217,
       "column": 3,
-      "index": 6264
+      "index": 6498
     }
   },
   {
@@ -139,14 +139,14 @@
     "defaultMessage": "!!!Easy confirmation",
     "file": "src/features/Settings/SettingsScreenNavigator.tsx",
     "start": {
-      "line": 209,
+      "line": 218,
       "column": 32,
-      "index": 6298
+      "index": 6532
     },
     "end": {
-      "line": 212,
+      "line": 221,
       "column": 3,
-      "index": 6414
+      "index": 6648
     }
   },
   {
@@ -154,14 +154,14 @@
     "defaultMessage": "!!!Set PIN",
     "file": "src/features/Settings/SettingsScreenNavigator.tsx",
     "start": {
-      "line": 213,
+      "line": 222,
       "column": 18,
-      "index": 6434
+      "index": 6668
     },
     "end": {
-      "line": 216,
+      "line": 225,
       "column": 3,
-      "index": 6532
+      "index": 6766
     }
   },
   {
@@ -169,14 +169,14 @@
     "defaultMessage": "!!!Settings",
     "file": "src/features/Settings/SettingsScreenNavigator.tsx",
     "start": {
-      "line": 217,
+      "line": 226,
       "column": 17,
-      "index": 6551
+      "index": 6785
     },
     "end": {
-      "line": 220,
+      "line": 229,
       "column": 3,
-      "index": 6654
+      "index": 6888
     }
   },
   {
@@ -184,14 +184,14 @@
     "defaultMessage": "!!!Language",
     "file": "src/features/Settings/SettingsScreenNavigator.tsx",
     "start": {
-      "line": 221,
+      "line": 230,
       "column": 17,
-      "index": 6673
+      "index": 6907
     },
     "end": {
-      "line": 224,
+      "line": 233,
       "column": 3,
-      "index": 6771
+      "index": 7005
     }
   },
   {
@@ -199,14 +199,14 @@
     "defaultMessage": "!!!App settings",
     "file": "src/features/Settings/SettingsScreenNavigator.tsx",
     "start": {
-      "line": 225,
+      "line": 234,
       "column": 20,
-      "index": 6793
+      "index": 7027
     },
     "end": {
-      "line": 228,
+      "line": 237,
       "column": 3,
-      "index": 6911
+      "index": 7145
     }
   },
   {
@@ -214,14 +214,14 @@
     "defaultMessage": "!!!About",
     "file": "src/features/Settings/SettingsScreenNavigator.tsx",
     "start": {
-      "line": 229,
+      "line": 238,
       "column": 14,
-      "index": 6927
+      "index": 7161
     },
     "end": {
-      "line": 232,
+      "line": 241,
       "column": 3,
-      "index": 7027
+      "index": 7261
     }
   },
   {
@@ -229,14 +229,29 @@
     "defaultMessage": "!!!Privacy Policy",
     "file": "src/features/Settings/SettingsScreenNavigator.tsx",
     "start": {
-      "line": 233,
+      "line": 242,
       "column": 22,
-      "index": 7051
+      "index": 7285
     },
     "end": {
-      "line": 236,
+      "line": 245,
       "column": 3,
-      "index": 7154
+      "index": 7388
+    }
+  },
+  {
+    "id": "global.collateral",
+    "defaultMessage": "!!!Collateral",
+    "file": "src/features/Settings/SettingsScreenNavigator.tsx",
+    "start": {
+      "line": 246,
+      "column": 14,
+      "index": 7404
+    },
+    "end": {
+      "line": 249,
+      "column": 3,
+      "index": 7475
     }
   }
 ]
