--- a/apps/wallet-mobile/translations/messages/src/features/Settings/WalletSettings/WalletSettingsScreen.json
+++ b/apps/wallet-mobile/translations/messages/src/features/Settings/WalletSettings/WalletSettingsScreen.json
@@ -4,14 +4,14 @@
     "defaultMessage": "!!!General",
     "file": "src/features/Settings/WalletSettings/WalletSettingsScreen.tsx",
     "start": {
-      "line": 201,
+      "line": 212,
       "column": 11,
-      "index": 6627
+      "index": 6831
     },
     "end": {
-      "line": 204,
+      "line": 215,
       "column": 3,
-      "index": 6725
+      "index": 6929
     }
   },
   {
@@ -19,14 +19,14 @@
     "defaultMessage": "!!!Actions",
     "file": "src/features/Settings/WalletSettings/WalletSettingsScreen.tsx",
     "start": {
-      "line": 205,
+      "line": 216,
       "column": 11,
-      "index": 6738
+      "index": 6942
     },
     "end": {
-      "line": 208,
+      "line": 219,
       "column": 3,
-      "index": 6836
+      "index": 7040
     }
   },
   {
@@ -34,14 +34,14 @@
     "defaultMessage": "!!!Switch wallet",
     "file": "src/features/Settings/WalletSettings/WalletSettingsScreen.tsx",
     "start": {
-      "line": 209,
+      "line": 220,
       "column": 16,
-      "index": 6854
+      "index": 7058
     },
     "end": {
-      "line": 212,
+      "line": 223,
       "column": 3,
-      "index": 6963
+      "index": 7167
     }
   },
   {
@@ -49,14 +49,14 @@
     "defaultMessage": "!!!Logout",
     "file": "src/features/Settings/WalletSettings/WalletSettingsScreen.tsx",
     "start": {
-      "line": 213,
+      "line": 224,
       "column": 10,
-      "index": 6975
+      "index": 7179
     },
     "end": {
-      "line": 216,
+      "line": 227,
       "column": 3,
-      "index": 7071
+      "index": 7275
     }
   },
   {
@@ -64,14 +64,14 @@
     "defaultMessage": "!!!Wallet name",
     "file": "src/features/Settings/WalletSettings/WalletSettingsScreen.tsx",
     "start": {
-      "line": 217,
+      "line": 228,
       "column": 14,
-      "index": 7087
+      "index": 7291
     },
     "end": {
-      "line": 220,
+      "line": 231,
       "column": 3,
-      "index": 7192
+      "index": 7396
     }
   },
   {
@@ -79,14 +79,14 @@
     "defaultMessage": "!!!Security",
     "file": "src/features/Settings/WalletSettings/WalletSettingsScreen.tsx",
     "start": {
-      "line": 221,
+      "line": 232,
       "column": 12,
-      "index": 7206
+      "index": 7410
     },
     "end": {
-      "line": 224,
+      "line": 235,
       "column": 3,
-      "index": 7306
+      "index": 7510
     }
   },
   {
@@ -94,14 +94,14 @@
     "defaultMessage": "!!!Change password",
     "file": "src/features/Settings/WalletSettings/WalletSettingsScreen.tsx",
     "start": {
-      "line": 225,
+      "line": 236,
       "column": 18,
-      "index": 7326
+      "index": 7530
     },
     "end": {
-      "line": 228,
+      "line": 239,
       "column": 3,
-      "index": 7439
+      "index": 7643
     }
   },
   {
@@ -109,14 +109,14 @@
     "defaultMessage": "!!!Easy transaction confirmation",
     "file": "src/features/Settings/WalletSettings/WalletSettingsScreen.tsx",
     "start": {
-      "line": 229,
+      "line": 240,
       "column": 20,
-      "index": 7461
+      "index": 7665
     },
     "end": {
-      "line": 232,
+      "line": 243,
       "column": 3,
-      "index": 7590
+      "index": 7794
     }
   },
   {
@@ -124,14 +124,29 @@
     "defaultMessage": "!!!Remove wallet",
     "file": "src/features/Settings/WalletSettings/WalletSettingsScreen.tsx",
     "start": {
-      "line": 233,
+      "line": 244,
       "column": 16,
-      "index": 7608
+      "index": 7812
     },
     "end": {
-      "line": 236,
+      "line": 247,
       "column": 3,
-      "index": 7717
+      "index": 7921
+    }
+  },
+  {
+    "id": "global.collateral",
+    "defaultMessage": "!!!Collateral",
+    "file": "src/features/Settings/WalletSettings/WalletSettingsScreen.tsx",
+    "start": {
+      "line": 248,
+      "column": 14,
+      "index": 7937
+    },
+    "end": {
+      "line": 251,
+      "column": 3,
+      "index": 8008
     }
   },
   {
@@ -139,14 +154,14 @@
     "defaultMessage": "!!!Network:",
     "file": "src/features/Settings/WalletSettings/WalletSettingsScreen.tsx",
     "start": {
-      "line": 238,
+      "line": 253,
       "column": 11,
-      "index": 7778
+      "index": 8069
     },
     "end": {
-      "line": 241,
+      "line": 256,
       "column": 3,
-      "index": 7844
+      "index": 8135
     }
   },
   {
@@ -154,14 +169,14 @@
     "defaultMessage": "!!!Wallet type:",
     "file": "src/features/Settings/WalletSettings/WalletSettingsScreen.tsx",
     "start": {
-      "line": 242,
+      "line": 257,
       "column": 14,
-      "index": 7860
+      "index": 8151
     },
     "end": {
-      "line": 245,
+      "line": 260,
       "column": 3,
-      "index": 7966
+      "index": 8257
     }
   },
   {
@@ -169,14 +184,14 @@
     "defaultMessage": "!!!Byron-era wallet",
     "file": "src/features/Settings/WalletSettings/WalletSettingsScreen.tsx",
     "start": {
-      "line": 246,
+      "line": 261,
       "column": 15,
-      "index": 7983
+      "index": 8274
     },
     "end": {
-      "line": 249,
+      "line": 264,
       "column": 3,
-      "index": 8094
+      "index": 8385
     }
   },
   {
@@ -184,14 +199,14 @@
     "defaultMessage": "!!!Shelley-era wallet",
     "file": "src/features/Settings/WalletSettings/WalletSettingsScreen.tsx",
     "start": {
-      "line": 250,
+      "line": 265,
       "column": 17,
-      "index": 8113
+      "index": 8404
     },
     "end": {
-      "line": 253,
+      "line": 268,
       "column": 3,
-      "index": 8228
+      "index": 8519
     }
   },
   {
@@ -199,14 +214,14 @@
     "defaultMessage": "!!!Unknown Wallet Type",
     "file": "src/features/Settings/WalletSettings/WalletSettingsScreen.tsx",
     "start": {
-      "line": 254,
+      "line": 269,
       "column": 21,
-      "index": 8251
+      "index": 8542
     },
     "end": {
-      "line": 257,
+      "line": 272,
       "column": 3,
-      "index": 8371
+      "index": 8662
     }
   },
   {
@@ -214,14 +229,14 @@
     "defaultMessage": "!!!About",
     "file": "src/features/Settings/WalletSettings/WalletSettingsScreen.tsx",
     "start": {
-      "line": 258,
+      "line": 273,
       "column": 9,
-      "index": 8382
+      "index": 8673
     },
     "end": {
-      "line": 261,
+      "line": 276,
       "column": 3,
-      "index": 8476
+      "index": 8767
     }
   },
   {
@@ -229,14 +244,14 @@
     "defaultMessage": "!!!Resync",
     "file": "src/features/Settings/WalletSettings/WalletSettingsScreen.tsx",
     "start": {
-      "line": 262,
+      "line": 277,
       "column": 10,
-      "index": 8488
+      "index": 8779
     },
     "end": {
-      "line": 265,
+      "line": 280,
       "column": 3,
-      "index": 8590
+      "index": 8881
     }
   }
 ]
