--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -375,6 +375,10 @@
   "components.settings.walletsettingscreen.general": "General",
   "components.settings.walletsettingscreen.actions": "Actions",
   "components.settings.changelanguagescreen.title": "Language",
+  "components.settings.collateral.lockedAsCollateral": "Locked as collateral",
+  "components.settings.collateral.removeCollateral": "If you want to return the amount locked as collateral to your balance press the remove icon",
+  "components.settings.collateral.collateralSpent": "Your collateral is gone, please generate new collateral",
+  "components.settings.collateral.generateCollateral": "Generate collateral",
   "components.stakingcenter.confirmDelegation.delegateButtonLabel": "Delegate",
   "components.stakingcenter.confirmDelegation.ofFees": "of fees",
   "components.stakingcenter.confirmDelegation.rewardsExplanation": "Current approximation of rewards that you will receive per epoch:",
