Add balance check

--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -379,6 +379,9 @@
   "components.settings.collateral.removeCollateral": "If you want to return the amount locked as collateral to your balance press the remove icon",
   "components.settings.collateral.collateralSpent": "Your collateral is gone, please generate new collateral",
   "components.settings.collateral.generateCollateral": "Generate collateral",
+  "components.settings.collateral.notEnoughFundsAlertTitle": "Not enough funds",
+  "components.settings.collateral.notEnoughFundsAlertMessage": "We could not find enough funds in this wallet to create collateral.",
+  "components.settings.collateral.notEnoughFundsAlertOK": "OK",
   "components.stakingcenter.confirmDelegation.delegateButtonLabel": "Delegate",
   "components.stakingcenter.confirmDelegation.ofFees": "of fees",
   "components.stakingcenter.confirmDelegation.rewardsExplanation": "Current approximation of rewards that you will receive per epoch:",
