--- a/apps/wallet-mobile/translations/messages/src/features/Settings/ManageCollateral/strings.json
+++ b/apps/wallet-mobile/translations/messages/src/features/Settings/ManageCollateral/strings.json
@@ -4,14 +4,14 @@
     "defaultMessage": "!!!Locked as collateral",
     "file": "src/features/Settings/ManageCollateral/strings.ts",
     "start": {
-      "line": 14,
+      "line": 17,
       "column": 22,
-      "index": 467
+      "index": 720
     },
     "end": {
-      "line": 17,
+      "line": 20,
       "column": 3,
-      "index": 580
+      "index": 833
     }
   },
   {
@@ -19,14 +19,14 @@
     "defaultMessage": "!!!If you want to return the amount locked as collateral to your balance press the remove icon",
     "file": "src/features/Settings/ManageCollateral/strings.ts",
     "start": {
-      "line": 18,
+      "line": 21,
       "column": 20,
-      "index": 602
+      "index": 855
     },
     "end": {
-      "line": 21,
+      "line": 24,
       "column": 3,
-      "index": 784
+      "index": 1037
     }
   },
   {
@@ -34,14 +34,14 @@
     "defaultMessage": "!!!Your collateral is gone, please generate new collateral",
     "file": "src/features/Settings/ManageCollateral/strings.ts",
     "start": {
-      "line": 22,
+      "line": 25,
       "column": 19,
-      "index": 805
+      "index": 1058
     },
     "end": {
-      "line": 25,
+      "line": 28,
       "column": 3,
-      "index": 950
+      "index": 1203
     }
   },
   {
@@ -49,14 +49,59 @@
     "defaultMessage": "!!!Generate collateral",
     "file": "src/features/Settings/ManageCollateral/strings.ts",
     "start": {
-      "line": 26,
+      "line": 29,
       "column": 22,
-      "index": 974
+      "index": 1227
     },
     "end": {
-      "line": 29,
+      "line": 32,
       "column": 3,
-      "index": 1086
+      "index": 1339
+    }
+  },
+  {
+    "id": "components.settings.collateral.notEnoughFundsAlertTitle",
+    "defaultMessage": "!!!Not enough funds",
+    "file": "src/features/Settings/ManageCollateral/strings.ts",
+    "start": {
+      "line": 33,
+      "column": 28,
+      "index": 1369
+    },
+    "end": {
+      "line": 36,
+      "column": 3,
+      "index": 1484
+    }
+  },
+  {
+    "id": "components.settings.collateral.notEnoughFundsAlertMessage",
+    "defaultMessage": "!!!We could not find enough funds in this wallet to create collateral.",
+    "file": "src/features/Settings/ManageCollateral/strings.ts",
+    "start": {
+      "line": 37,
+      "column": 30,
+      "index": 1516
+    },
+    "end": {
+      "line": 40,
+      "column": 3,
+      "index": 1684
+    }
+  },
+  {
+    "id": "components.settings.collateral.notEnoughFundsAlertOK",
+    "defaultMessage": "!!!OK",
+    "file": "src/features/Settings/ManageCollateral/strings.ts",
+    "start": {
+      "line": 41,
+      "column": 25,
+      "index": 1711
+    },
+    "end": {
+      "line": 44,
+      "column": 3,
+      "index": 1809
     }
   }
 ]
