--- a/apps/wallet-mobile/translations/messages/src/features/Swap/common/AmountCard/AmountCard.json
+++ b/apps/wallet-mobile/translations/messages/src/features/Swap/common/AmountCard/AmountCard.json
@@ -4,14 +4,14 @@
     "defaultMessage": "!!!Select token",
     "file": "src/features/Swap/common/AmountCard/AmountCard.tsx",
     "start": {
-      "line": 128,
+      "line": 134,
       "column": 15,
-      "index": 4027
+      "index": 4165
     },
     "end": {
-      "line": 131,
+      "line": 137,
       "column": 3,
-      "index": 4110
+      "index": 4248
     }
   },
   {
@@ -19,14 +19,14 @@
     "defaultMessage": "!!!Current Balance",
     "file": "src/features/Swap/common/AmountCard/AmountCard.tsx",
     "start": {
-      "line": 132,
+      "line": 138,
       "column": 18,
-      "index": 4130
+      "index": 4268
     },
     "end": {
-      "line": 135,
+      "line": 141,
       "column": 3,
-      "index": 4219
+      "index": 4357
     }
   },
   {
@@ -34,14 +34,14 @@
     "defaultMessage": "!!!Not enough balance",
     "file": "src/features/Swap/common/AmountCard/AmountCard.tsx",
     "start": {
-      "line": 136,
+      "line": 142,
       "column": 20,
-      "index": 4241
+      "index": 4379
     },
     "end": {
-      "line": 139,
+      "line": 145,
       "column": 3,
-      "index": 4335
+      "index": 4473
     }
   },
   {
@@ -49,14 +49,29 @@
     "defaultMessage": "!!!Not enough supply in the pool",
     "file": "src/features/Swap/common/AmountCard/AmountCard.tsx",
     "start": {
-      "line": 140,
+      "line": 146,
       "column": 19,
-      "index": 4356
+      "index": 4494
     },
     "end": {
-      "line": 143,
+      "line": 149,
       "column": 3,
-      "index": 4460
+      "index": 4598
+    }
+  },
+  {
+    "id": "swap.swapScreen.noPool",
+    "defaultMessage": "!!! This pair is not available in any liquidity pool",
+    "file": "src/features/Swap/common/AmountCard/AmountCard.tsx",
+    "start": {
+      "line": 150,
+      "column": 10,
+      "index": 4610
+    },
+    "end": {
+      "line": 153,
+      "column": 3,
+      "index": 4725
     }
   }
 ]
