--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -123,7 +123,7 @@
   "swap.swapScreen.swapTitle": "Swap",
   "swap.swapScreen.batcherFee": "Batcher Fee",
   "swap.swapScreen.dex": "dex",
-  "swap.swapScreen.tokenSwapTab": "Token swap",
+  "swap.swapScreen.tokenSwapTab": "Asset swap",
   "swap.swapScreen.ordersSwapTab": "Orders",
   "swap.swapScreen.openOrders": "Open orders",
   "swap.swapScreen.completedOrders": "Completed orders",
@@ -143,7 +143,7 @@
   "swap.swapScreen.slippageTolerance": "Slippage tolerance",
   "swap.swapScreen.slippageToleranceError": "Slippage must be a number between 0 and 100 and have up to 1 decimal",
   "swap.swapScreen.slippageToleranceInfo": "Slippage tolerance is set as a percentage of the total swap value. Your transactions will not be executed if the price moves by more than this amount",
-  "swap.swapScreen.selectPool": "Select pool",
+  "swap.swapScreen.selectPool": "Select DEX",
   "swap.swapScreen.seeOnExplorer": "see on explorer",
   "swap.swapScreen.eachVerifiedToken": "Each verified tokens gets",
   "swap.swapScreen.verifiedBadge": "verified badge",
